chore: #99 Remove the archaic `Collectors.toList()` usage. Use `Stream.toList()` instead.