@@ -6,7 +6,6 @@ import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -18,11 +17,12 @@ class CarTest {
     void testCarIdsAreUnique() {
         Car[] cars = Car.values();
 
-        List<Integer> uniqueCarIds = Arrays.stream(cars)
+        List<Integer> uniqueCarIds = Arrays
+            .stream(cars)
             .map(car -> car.id)
             .distinct()
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
 
         logger.info("unique car ids: \n{}", uniqueCarIds);
 
@@ -33,11 +33,12 @@ class CarTest {
     void testCarNamesAreUnique() {
         Car[] cars = Car.values();
 
-        List<String> uniqueCarNames = Arrays.stream(cars)
+        List<String> uniqueCarNames = Arrays
+            .stream(cars)
             .map(car -> car.name)
             .distinct()
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
 
         logger.info("unique car names: \n{}", uniqueCarNames);
 
@@ -48,12 +49,13 @@ class CarTest {
     void testAllPersonalCarIdsArePersonalIds() {
         Car[] cars = Car.values();
 
-        List<Integer> carPersonalIds = Arrays.stream(cars)
+        List<Integer> carPersonalIds = Arrays
+            .stream(cars)
             .filter(car -> (car.personalId != null))
             .map(car -> car.personalId)
             .distinct()
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
 
         logger.info("personal car ids for cars that have been made public: \n{}", carPersonalIds);
 
@@ -66,11 +68,12 @@ class CarTest {
     void testAllPersonalCarsThatWereMadePublicHaveOriginalOwnerFilled() {
         Car[] cars = Car.values();
 
-        List<Car> personalCarsThatWereMadePublic = Arrays.stream(cars)
+        List<Car> personalCarsThatWereMadePublic = Arrays
+            .stream(cars)
             .filter(Car::wasPersonalButMadePublic)
             .distinct()
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
 
         logger.info("cars that were personal but have been made public: \n{}", personalCarsThatWereMadePublic);
 
